package utilities;

/**
 * Author: Joshua Bäuml
 */
public enum CustomerType {
    USUAL, BIKE, DISABLED, WOMEN, LOCAL
}
