/**
*Author: Joshua Bäuml
*/

@startuml
left to right direction

class ConfigServlet{
    #doPost(req: HttpServletRequest, res: HttpServletResponse): void
}

class SimulationServlet{
    #doPost(req: HttpServletRequest, res: HttpServletResponse): void

}

interface VehicleIF{
    getLicensePlate(): String
    getType(): CustomerType
    getTicket(): Ticket
}

class Bike{

    t: Ticket
    type: CustomerType
    licensePlate: String

    +Bike(x: CustomerType, lp: String,id: int)
    +getLicensePlate(): String
    +getType(): CustomerType
    +getTicket(): Ticket
}


class Car{
        t: Ticket
        type: CustomerType
        licensePlate: String

        +Bike(x: CustomerType, plate: String, id: int)
        +getLicensePlate(): String
        +getType(): CustomerType
        +getTicket(): Ticket
}

class CarPark{
    +name: String
    -park: ParkingLot[]
    -price: double
    -freeCarSpaces: int
    -freeLocalSpaces: int
    -freeDisabledSpaces: int
    -freeWomanSpaces: int
    -freeBikeSpaces: int
    +cfg: Config
    -numberOfTickets: int

    +CarPark(c: Config)
    +createVehicle(lp: String, x: CustomerType): VehicleIF
    +createRandomVehicle(): VehicleIF
    +enter(): void
    +enter(v: VehicleIF): void
    +enterVehicle(v: VehicleIF): void
    +leave(v: int): void
    +leaveRandom(): VehicleIF
    +getFreeCarSpaces(): int
    +getFreeLocalSpaces(): int
    +getFreeDisabledSpaces(): int
    +getFreeWomanSpaces(): int
    +getFreeBikeSpaces(): int
    +getPrice(): double
    +getParkinglots(): int
    +getFreeSpaces(): int

}

class ParkingLot{
    vehicle: VehicleIF
    type: CustomerType

    +Parkinglot(c: CustomerType)
    +isEmpty(): boolean
    +removeVehicle(): VehicleIF
    +addVehicle(v: VehicleIF): void
}


class Config{
    -name: String
    -totalLots: int
    -womenLots: int
    -disabledLots: int
    -localLots: int
    -bikeLots: int
    -price: double

    +Config()
    +Config(config: JsonObject)
    +validateConfig(config: JsonObject): boolean
    +getValue(type: String): int
    +getName(): String
    +getPrice(): double
    +toString(): String
}

class Ticket{
    entrance: Date
    exit: Date
    +licensePlat: String
    -isPaid: boolean
    -ticketID: int
    +numberOfTickets: int
    -price: double
    -duration: int

    +Ticket(lp: String)
    +isPaid(): boolean
    +payTicket(p: double): void
    +getTicketID(): int
    +getEntranceDate(): Date
    +getExitDate(): Date
    +getPrice(): double
    +getDuration(): int

}

class configFormat{
    {static}+ formatConfig(cfg: Config): JsonObject
}

enum CustomerType{
    USUAL
    BIKE
    DISABLED
    WOMEN
    LOCAL
}

class requestUtilities{
    {static}+getRequestParams(req: HttpServletRequest): void
    {static}+getContextParams(req: HttpServletRequest): void
    {static}+setContextParam(req: HttpServletRequest): void
    {static}+createJson(req: HttpServletRequest): JsonObject
    {static}+checkAttributes(req: HttpServletRequest): boolean
}

class responseUtilities{
    {static}+createVehicleAsJson(v: VehicleIF, freeSpaces:int): JsonObject
}

class ConfigServletTest <<JUnit>>{
    doPost(): void
}

class requestUtilitiesTest <<JUnit>>{
    req: HttpServletRequest

    init(): void
    getRequestParams_(): void
    getContextParams(): void
    setContextParam(): void
    createJson_(): void
    checkAttributes(): void
}

class responseUtilitiesTest <<JUnit>>{
    ph: CarPark
    car: VehicleIF
    v: JsonObject

    init(): void
    createVehicleAsJson_CustomerType(): void
    createVehicleAsJson_Licenseplate(): void
    createVehicleAsJson_EntryDate(): void
    createVehicleAsJson_ExitDate(): void
    createVehicleAsJson_Price(): void
    createVehicleAsJson_TicketID(): void
}

class SimulationServletTest <<JUnit>>{
    doPost(): void
}

class CarParkTest <<JUnit>>{
    ph: CarPark
    car: VehicleIF

    init(): void
    checkNumberOfParkspaces_AssertTrue(): void
    createRandomVehicle(): void
    enter(): void
    leave(): void


}

class VehicleIFTest <<JUnit>>{
    bike: VehicleIF

    init(): void
    getLicensePlate(): void
    getType(): void
    getTicket(): void
}

class ServletException
class IOException
class IllegalArgumentException
class HttpServlet


ConfigServlet .. ServletException : throws
ConfigServlet .. IOException : throws
ConfigServlet -|> HttpServlet : <<extends>>

SimulationServlet .. ServletException: throws
SimulationServlet .. IOException: throws
SimulationServlet -|> HttpServlet: <<extends>

requestUtilities .. IOException: throws

Config .. IllegalArgumentException: throws

Bike ..|> VehicleIF
Car ..|> VehicleIF

CarPark +-- ParkingLot

VehicleIF .. VehicleIFTest: tests
CarPark .. CarParkTest: tests
requestUtilities .. requestUtilitiesTest: tests
responseUtilities .. responseUtilitiesTest: tests
ConfigServlet .. ConfigServletTest: tests
SimulationServlet .. SimulationServletTest: tests


@enduml